Add react-countup package and update Bar component

--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -4,7 +4,7 @@
 ## What is Master CSS?
 The CSS language and framework for rapidly building modern and high-performance websites.
 
-Whether you're a solo developer or part of a large team, Master CSS can help you build interactive, dynamic, fastest, and beautiful websites.
+Whether you're a solo developer or part of a large team, Master CSS can help you build interactive, dynamic, [fastest](#minimal-css-on-the-market), and beautiful websites.
 
 ### The CSS language
 Master CSS is a [markup-driven](/docs/markup-driven) CSS language with smart rules allowing you to write familiar CSS using concise syntax within HTML.
