--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -56,6 +56,7 @@ Master CSS doesn't use heavy-duty build tools like [PostCSS](https://postcss.org
 ### Minimal CSS on the market
 This is a real-world benchmark of critical CSS on page load for well-known official documentation websites.
 <CriticalCSSForDocsSitesBenchmark />
+According to HTTP Archive [CSS Bytes](https://httparchive.org/reports/page-weight#bytesCss), the sum of transfer size kilobytes of all external stylesheets requested by the page is **~82 kB**, excluding internal and inline styles. **The Master CSS documentation site is only ~6 kB (brotli) in total**.
 
 Reducing [critical CSS](https://web.dev/articles/codelab-extract-and-inline-critical-css) can improve page loading speed, browser rendering performance, and SEO metrics.
 
