--- a/website/app/[locale]/(root)/docs/installation/(tabs)/cdn/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/cdn/content.mdx
@@ -1,4 +1,4 @@
-Copy and paste [CDNs](/docs/installation#cdns) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
+Copy and paste [CDNs](/docs/installation#cdn-providers) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
 
 <StepSection className="mt:12x">
     <Step>
