--- a/website/app/[locale]/(root)/docs/rendering-modes/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/runtime-rendering/content.mdx
@@ -125,7 +125,7 @@ The runtime engine appends `html <style id="master">` in `html <head>` during in
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.master.co/css@2"></script>
+    <script src="https://cdn.master.co/css-runtime@rc"></script>
 +    <style id="master"></style>
 </head>
 ```
