--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -77,9 +77,7 @@ Redesign the homepage according to the features of v2.
     <div className='bg:canvas b:1|frame p:3x|8x r:1x mt:2x'>
         When using a CDN in production, pining the current version to avoid potential conflicts due to version changes is strongly recommended, like so:
         <Code lang="html">
-        {
-            `<script src="https://cdn.master.co/css@${version}"></script>`
-        }
+        {`<script src="https://cdn.master.co/css-runtime@${version}"></script>`}
         </Code>
     </div>
 </details>
