Update website app metadata and add new text colors component

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -28,18 +28,18 @@
 By default, theme modes [drive](/docs/configuration#themedriver) base color variables meticulously adjusted in light and dark modes.
 <Demo $py={0} $px={0}>
     <DemoLight>
-        <div className="bg:yellow aspect:5/1 size:full|40 r:1x"></div>
+        <div className="bg:yellow aspect:2/1 size:full|12x r:1x"></div>
     </DemoLight>
     <DemoDark>
-        <div className="bg:yellow aspect:5/1 size:full|40 r:1x"></div>
+        <div className="bg:yellow aspect:2/1 size:full|12x r:1x"></div>
     </DemoDark>
 </Demo>
 ```html
-<div class="**light**">
-    <div class="bg:yellow"></div>
+<div class="light">
+    <div class="bg:**yellow**"></div>
 </div>
-<div class="**dark**">
-    <div class="bg:yellow"></div>
+<div class="dark">
+    <div class="bg:**yellow**"></div>
 </div>
 ```
 [View the default variables on GitHub](https://github.com/master-co/css/blob/rc/packages/css/src/config/variables.ts)
