--- a/website/app/[locale]/(root)/docs/text-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-colors/content.mdx
@@ -30,22 +30,7 @@
 | <Aa className="fg:red" />`text-red`               | bold, energetic, attention-grabbing                                       |
 
 By default, theme modes [drive](/docs/configuration#themedriver) text variables meticulously adjusted in light and dark modes.
-<Demo $py={0} $px={0}>
-    <DemoLight>
-        <div className="fg:yellow font:heavy font:96">A</div>
-    </DemoLight>
-    <DemoDark>
-        <div className="fg:yellow font:heavy font:96">A</div>
-    </DemoDark>
-</Demo>
-```html
-<div class="**light**">
-    <span class="fg:yellow">A</span>
-</div>
-<div class="**dark**">
-    <span class="fg:yellow">A</span>
-</div>
-```
+<Overview />
 [View the default variables on GitHub](https://github.com/master-co/css/blob/rc/packages/css/src/config/variables.ts)
 
 ---
