Add hover preview feature to Master CSS Language Service

--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -83,6 +83,7 @@ Master CSS is the first language to highlight class names fully, making identify
         <InlineCode lang="html" className="font:16@sm">{'<div class="bg:#ceb195:hover@sm …">'}</InlineCode>
     </DemoPanel>
 </Demo>
+This feature is included in the [Master CSS Language Service](/docs/language-service).
 
 ### 🚧 Code Linting
 
@@ -438,6 +439,12 @@ Reducing [critical CSS](https://web.dev/articles/codelab-extract-and-inline-crit
 ---
 
 ## 🚧 Documentation guide
+
+#### Hover preview
+
+```html
+<div class="hide@<md">...</div>
+```
 
 ---
 
