--- a/website/app/[locale]/(root)/docs/style-declarations/components/Abbreviations.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/components/Abbreviations.mdx
@@ -1,7 +1,7 @@
 export const code1 = `<p class="**font-size:1rem** **margin-top:32** **justify-content:center**">`
 export const code2 = `<p class="**f:16** **mt:32** **jc:center**">`
 
-Syntax: <code><span className="token value mcss language-mcss"><span className="token Mroot"><span className="token Mkey">property-name</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code> → <code><span className="token value mcss language-mcss"><span className="token Mroot"><span className="token Mkey">pn</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code>
+Syntax: <code><span className="token value mcss language-mcss"><span className="token mcss"><span className="token Mkey">property-name</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code> → <code><span className="token value mcss language-mcss"><span className="token mcss"><span className="token Mkey">pn</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code>
 
 Property names are still too long on class names?
 <Code lang="html">
