--- a/website/app/[locale]/(root)/docs/style-declarations/components/AmbiguousShorthands.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/components/AmbiguousShorthands.mdx
@@ -1,7 +1,7 @@
 export const code1 = `<p class="**text-align:center** **font-size:1rem** **font-weight:bold** **border-style:solid**">`
 export const code2 = `<p class="**text:center** **font:16** **font:bold** **border:solid**">`
 
-Syntax: <code><span className="token value mcss language-mcss"><span className="token Mroot"><span className="token Mkey">property-name</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code> → <code><span className="token value mcss language-mcss"><span className="token Mroot"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code>
+Syntax: <code><span className="token value mcss language-mcss"><span className="token mcss"><span className="token Mkey">property-name</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code> → <code><span className="token value mcss language-mcss"><span className="token mcss"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span></span></span></span></span></code>
 
 Native CSS shorthands combine multiple properties for quick declaration, and there is no shorthand for a single property.
 <Code lang="html">
