--- a/website/app/[locale]/(root)/docs/style-declarations/components/MultiStyleShorthands.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/components/MultiStyleShorthands.mdx
@@ -2,7 +2,7 @@ export const code1 = `<p class="**padding-top:1rem** **padding-bottom:1rem** **p
 export const code2 = `<p class="**padding:16|32** **border:1|solid|red**">`
 export const code3 = `<p class="**p:16|32** **b:1|red**">`
 
-Syntax: <code><span className="token value mcss language-mcss"><span className="token Mroot"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span><span className="token Mspace">|</span><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span><span className="token Mspace">|</span><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span><span className="token Mspace">…</span></span></span></span></span></code>
+Syntax: <code><span className="token value mcss language-mcss"><span className="token mcss"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span><span className="token Mspace">|</span><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span><span className="token Mspace">|</span><span className="token Mnumber_unit"><span className="token Mnumber">value</span></span><span className="token Mspace">…</span></span></span></span></span></code>
 
 Inherit native CSS shorthands to reduce the frequency of duplication of style names in classes.
 <Code lang="html">
