--- a/website/app/[locale]/(root)/docs/style-declarations/components/Semantics.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/components/Semantics.mdx
@@ -1,7 +1,7 @@
 export const code1 = `<p class="**text-transform:capitalize** **position:absolute** **display:block** **border-radius:50%**">`
 export const code2 = `<p class="**capitalize** **abs** **block** **round**">`
 
-Syntax: <code className="token language-mcss"><span className="token Mroot"><span className="token Mvalue">semantic</span></span></code>
+Syntax: <code className="token language-mcss"><span className="token mcss"><span className="token Mvalue">semantic</span></span></code>
 
 Writing the native CSS directly makes your markup verbose.
 <Code lang="html">
