--- a/website/app/[locale]/(root)/docs/style-declarations/components/Units.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/components/Units.mdx
@@ -1,4 +1,4 @@
-Syntax: <code><span className="token value mcss language-mcss"><span className="token Mroot"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span></span><span className="token Mvalueroot"><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span><span className="token Munit">unit</span></span></span></span></span></span></code>
+Syntax: <code><span className="token value mcss language-mcss"><span className="token mcss"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span></span><span className="token Mvalueroot"><span className="token Mvalue"><span className="token Mnumber_unit"><span className="token Mnumber">value</span><span className="token Munit">unit</span></span></span></span></span></span></code>
 
 All [CSS units](https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Values_and_units) are allowed: `px`, `em`, `%,` `ex`, `ch`, `rem`, `vw`, `vh`, `vmin`, `vmax`, `cm`, `mm`, `in`, `pt`, `pc`, `ms`, `s`, `deg`, etc.
 ```html
