--- a/website/app/[locale]/(root)/docs/style-declarations/components/Important.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/components/Important.mdx
@@ -1,4 +1,4 @@
-Syntax: <code><span className="token Mroot"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue">value<span className="token Mimportant">!</span></span></span></span></code>
+Syntax: <code><span className="token mcss"><span className="token Mkey">property</span><span className="token Mvalueroot"><span className="token Mcolon">:</span><span className="token Mvalue">value<span className="token Mimportant">!</span></span></span></span></code>
 
 Declare `!important` for a style by marking it with `!`.
 ```html
